deploy/kubernetes/overlays/gke/log-server-stackdriver-prometheus-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-server
spec:
  template:
    spec:
      containers:
      - name: prometheus-to-sd
        image: gcr.io/google-containers/prometheus-to-sd:v0.2.6
        command:
          - /monitor
          - --stackdriver-prefix=custom.googleapis.com
          - --source=logserver:http://localhost:8091/metrics
          - --pod-id=$(POD_NAME)
          - --namespace-id=$(POD_NAMESPACE)
          - --metrics-resolution=5s
