deploy/kubernetes/overlays/gke/server-stackdriver-prometheus-sidecar.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
      - name: prometheus-to-sd
        image: gcr.io/google-containers/prometheus-to-sd:v0.2.6
        command:
          - /monitor
          - --stackdriver-prefix=custom.googleapis.com
          - --source=keyserver:http://localhost:8081/metrics
          - --pod-id=$(POD_NAME)
          - --namespace-id=$(POD_NAMESPACE)
          - --metrics-resolution=5s
