deploy/kubernetes/overlays/gke/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort # Required for ingress
