deploy/kubernetes/overlays/gke/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kt-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "kt-ingress-ip"
    kubernetes.io/ingress.allow-http: "false"
